--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
         
             <a href = "https://www.instagram.com/purpple_staar/" target = "_blank"><img src = "Portafolio_Imagenes/instagram.png" alt = "instagram"></a>
 
-            <a href = "https://www.artstation.com/inicio" target="_blank"><img src = "Portafolio_Imagenes/artstation.png" alt = "artstation"></a>.
+             <a href = "https://twitter.com/PurppleStaar" target="_blank"><img src = "Portafolio_Imagenes/twitter.png" alt = "twitter"></a>.
+
+            <a href = "https://purpple_staar.artstation.com/" target="_blank"><img src = "Portafolio_Imagenes/artstation.png" alt = "artstation"></a>.
         </ul>
     <div>
 </body>
