--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class = "contenedorNombre">
         <h4>Svetlana cano Sens</h4>
 
-        <p>Ingeniera en Producción Multimeda</p>
+        <p>Ingeniera en Producción Multimedia</p>
     </div>
         
     <div class = "contenedorSliderImagen">
